Bug 966507 - Recenter the displayport around the composition bounds if layout doesn't accept the scroll update calculated by APZ. r=tn,Cwiiis